--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,5 +14,8 @@
     "history": "^5.3.0",
     "inversify": "^6.0.3",
     "reflect-metadata": "^0.2.2"
+  },
+  "devDependencies": {
+    "vitest": "^2.1.4"
   }
 }
