--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@vue/reactivity": "^3.5.12",
     "history": "^5.3.0",
     "inversify": "^6.0.3",
     "reflect-metadata": "^0.2.2"
