--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -3,13 +3,21 @@
   "version": "1.0.0",
   "description": "vue 应用",
   "scripts": {
-    "test": "vitest --reporter=dot",
-    "coverage": "vitest run --coverage",
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "tsc --noEmit --watch"
+    "dev": "vite --open",
+    "type-check": "vue-tsc --noEmit",
+    "type-check:watch": "vue-tsc --noEmit --watch"
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "inversify": "^6.0.3",
+    "vite": "^5.4.10",
+    "vue-tsc": "^2.1.8"
+  },
+  "dependencies": {
+    "core": "workspace: *",
+    "vue": "^3.5.12"
+  }
 }
