--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,6 +4,7 @@
   "description": "react 应用",
   "scripts": {
     "dev": "vite --open",
+    "build": "vite build",
     "type-check": "vue-tsc --noEmit",
     "type-check:watch": "vue-tsc --noEmit --watch"
   },
